app/src/main/java/com/example/mviexample/data/error/InterpretedError.kt
package com.example.mviexample.data.error

interface InterpretedError {
    val userFriendlyInterpretation: String
}